Implement Swagger and Service Unit Test

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,12 +1,12 @@
 # Application Name
-spring.application.name=carros
+spring.application.name=cars
 
 # Security Configurations
 spring.security.user.name=Fernando
 spring.security.user.password=password
 
 # SQLite Database Configurations
-spring.datasource.url=jdbc:sqlite:sqlite/carro.db
+spring.datasource.url=jdbc:sqlite:sqlite/car.db
 spring.datasource.driver-class-name=org.sqlite.JDBC
 
 spring.jpa.properties.hibernate.dialect=org.hibernate.community.dialect.SQLiteDialect
@@ -14,3 +14,6 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.community.dialect.SQLiteDi
 # Hibernate Configurations
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=update
+
+# OpenApi Config
+cars.openapi.dev-url=http://localhost:8080
