Adds global exception handler and Security file

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,8 +2,8 @@
 spring.application.name=cars
 
 # Security Configurations
-spring.security.user.name=Fernando
-spring.security.user.password=password
+#spring.security.user.name=Fernando
+#spring.security.user.password=password
 
 # SQLite Database Configurations
 spring.datasource.url=jdbc:sqlite:sqlite/car.db
