Implements Security using database

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -13,7 +13,7 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.community.dialect.SQLiteDi
 
 # Hibernate Configurations
 spring.jpa.show-sql=true
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=none
 
 # OpenApi Config
 cars.openapi.dev-url=http://localhost:8080
